--- a/day3/14.hrdform.html
+++ b/day3/14.hrdform.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Day3)hrdfrom</title>
+    <link rel="stylesheet" href="13member.css">
 </head>
 <style>
     tr{
@@ -19,14 +20,17 @@
     td{
         border: 1px solid gray;
     }
+    table{
+        border: 1px solid black;
+    }
 </style>
 <body>
+    <div style=" width: 70%; margin: auto; max-width: 600px;"></div>
     <h3 style="text-align: center; background-color: #F1F1F1;" >
         홈쇼핑 회원 등록
     </h3>
-    <div style=" margin: auto; width: 70%; max-width: 1000px;"></div>
     <form action="">
-        <table style=" width: 100% ; border: 2px gray;">
+        <table style=" margin:auto; width: 70%;">
             
             <tr>
                 <td class="do">회원번호(자동발생)</td>
