--- a/day3/15.hrdtable.html
+++ b/day3/15.hrdtable.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="13member.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
     </style>
 <h3 style="text-align: center;">회원목록조회/수정</h3>
 <div style="margin: auto; width: 70%; max-width: 1000px;"></div>
-<table style="width: 100%; text-align: center; background-color: rgb(204, 204, 204); border: 2px solid black;">
+<table style="margin:auto; width: 80%; text-align: center; background-color: rgb(204, 204, 204); border: 2px solid black;">
     <tr>
         <td>회원번호</td>
         <td>회원성명</td>
@@ -78,14 +79,14 @@
         <td>일반</td>
         <td>60</td>
     </tr>
-    <tr>
-        <td class="white">100006</td>
-        <td>김행복</td>
-        <td>010-1111-7777</td>
-        <td>제주도 제주시 감나무골</td>
-        <td>2015-12-11</td>
-        <td>직원</td>
-        <td>60</td>
+    <tr style="background-color: rgb(204, 204, 204); ">
+        <td class="white" style="background-color: rgb(204, 204, 204); ">100006</td>
+        <td style="background-color: rgb(204, 204, 204); ">김행복</td>
+        <td style="background-color: rgb(204, 204, 204); ">010-1111-7777</td>
+        <td style="background-color: rgb(204, 204, 204); ">제주도 제주시 감나무골</td>
+        <td style="background-color: rgb(204, 204, 204); ">2015-12-11</td>
+        <td style="background-color: rgb(204, 204, 204); ">직원</td>
+        <td style="background-color: rgb(204, 204, 204); ">60</td>
     </tr>
     
    
