--- a/day3/14.hrdform.html
+++ b/day3/14.hrdform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Day3)hrdfrom</title>
-    <link rel="stylesheet" href="13member.css">
+    <link rel="stylesheet" href="14formcss.css">
 </head>
 <style>
     tr{
@@ -26,15 +26,15 @@
 </style>
 <body>
     <div style=" width: 70%; margin: auto; max-width: 600px;"></div>
-    <h3 style="text-align: center; background-color: #F1F1F1;" >
+    <h3 style="text-align: center; width: 50%; margin: auto; background-color: #F1F1F1;" >
         홈쇼핑 회원 등록
     </h3>
     <form action="">
-        <table style=" margin:auto; width: 70%;">
+        <table style=" margin:auto; width: 50%;">
             
             <tr>
                 <td class="do">회원번호(자동발생)</td>
-                <td><input type="number" style="width: 20%;"></td>
+                <td style="width: 60%;"><input type="number" style="width: 20%;"></td>
             </tr>
             <tr>
                 <td class="do">회원성명</td>
