--- a/day3/15.hrdtable.html
+++ b/day3/15.hrdtable.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="13member.css">
+    <link rel="stylesheet" href="15.tablecss.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         }
         
     </style>
-<h3 style="text-align: center;">회원목록조회/수정</h3>
+<h3 style="text-align: center; margin:auto; background-color: rgb(162, 177, 172); width:80%;">회원목록조회/수정</h3>
 <div style="margin: auto; width: 70%; max-width: 1000px;"></div>
 <table style="margin:auto; width: 80%; text-align: center; background-color: rgb(204, 204, 204); border: 2px solid black;">
     <tr>
