--- a/day4/18.hrdform.html
+++ b/day4/18.hrdform.html
@@ -24,7 +24,7 @@
                 -->
                 <li><a href="18.hrdform.html">회원등록</a></li>
                 <li><a href="19.hrdtable.html">회원목록조회</a></li>
-                <li><a href="">회원매출조회</a></li>
+                <li><a href="../hrd/sales.html">회원매출조회</a></li>
                 <li style="margin-left: 40px;"><a href="17.weblayout.html">홈으로</a></li>
         </ul>
     </div>
