--- a/hrd/20.weblayout.html
+++ b/hrd/20.weblayout.html
@@ -19,7 +19,7 @@
 
                 
                 -->
-            <li><a href="javascript:link1()">회원등록</a></li>
+            <li><a href="javascript:link()">회원등록</a></li>
             <li><a href="javascript:link2()">회원목록조회</a></li>
             <li><a href="javascript:link3()">회원매출조회</a></li>
             <li style="margin-left: 40px;"><a href="javascript:home()">홈으로</a></li>
@@ -41,11 +41,11 @@
     <script>
         function link(){    //자바스크립트 함수 link1()
             //id속성값이 'main' 인 iframe 요소를 가져와서 src 속성값을 변경하기
-            document.getElementById('main').src = '../day3/14.hrdform.html';
+            document.getElementById('main').src = 'inputform.html';
             
         }
         function link2(){
-            document.getElementById('main').src = '../day3/15.hrdtable.html';
+            document.getElementById('main').src = 'memberList.html';
         }
         function link3(){
             document.getElementById('main').src = 'sales.html';
